pre-release adjustments

--- a/buildings.html
+++ b/buildings.html
@@ -82,8 +82,8 @@
                     <select id="input_event" class="custom-select" style="width: 50%; margin-bottom: 10px;"  onchange="">
                         <option value="all_events">All</option>
                         <optgroup label="2021">
-                            <option value="march_xxi_" selected="selected">Rise of the Phoenix Cult</option>
-                            <option value="february_xxi_">Elvarian Carnival</option>
+                            <option value="march_xxi_" disabled>Rise of the Phoenix Cult</option>
+                            <option value="february_xxi_" selected="selected">Elvarian Carnival</option>
                         </optgroup>
                         <optgroup label="2020">
                             <option value="december_xx_">Winter Magic - The Snow Owl</option>
