--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
     <div class="panel">
         <div class="container center bg-skin_light_background rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; max-height: 600px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
-                <li><strong>Future content of the main page!</strong></li>
+                <li>Introduction video
+                    <iframe class="center" width="560" height="315.2" src="https://www.youtube.com/embed/0OwlOJNLWmw"></iframe>
+                </li>
+                <li><strong>Release of the website! (March 2021)</strong></li>
             </div>
         </div>
     </div>
