new filter options

--- a/buildings.html
+++ b/buildings.html
@@ -110,11 +110,23 @@
                     <center><label for="input_production">Filter production:</label>
                     <select id="input_production" class="custom-select" style="width: 50%; margin-bottom: 10px;" onchange="">
                         <option value="all_events">All</option>
-                        <option value="only,providedCulture">Culture Only</option>
-                        <option value="only,providedCulture,provided_population">Culture & Population Only</option>
+                        <option value="only&providedCulture">Culture Only</option>
+                        <option value="only&providedCulture&provided_population">Culture & Population Only</option>
+                        <option value="boosted_plus_0_quality_1|boosted_plus_1_quality_1|boosted_plus_2_quality_1|
+                        marble|steel|planks">Standard Goods T1</option>
+                        <option value="boosted_plus_0_quality_2|boosted_plus_1_quality_2|boosted_plus_2_quality_2|
+                        crystal|scrolls|silk">Standard Goods T2</option>
+                        <option value="boosted_plus_0_quality_3|boosted_plus_1_quality_3|boosted_plus_2_quality_3|
+                        elixir|magic_dust|gems">Standard Goods T3</option>
                         <option value="orcs">Orcs</option>
                         <option value="mana">Mana</option>
                         <option value="seeds">Seeds</option>
+                        <option value="boosted_sentient_plus_0_quality_1|boosted_sentient_plus_1_quality_1|boosted_sentient_plus_2_quality_1|
+                        sentientmarble|sentientsteel|sentientplanks">Sentient Goods T4</option>
+                        <option value="boosted_sentient_plus_0_quality_2|boosted_sentient_plus_1_quality_2|boosted_sentient_plus_2_quality_2|
+                        sentientcrystal|sentientscrolls|sentientsilk">Sentient Goods T5</option>
+                        <option value="boosted_sentient_plus_0_quality_3|boosted_sentient_plus_1_quality_3|boosted_sentient_plus_2_quality_3|
+                        sentientelixir|sentientmagic_dust|sentientgems">Sentient Goods T6</option>
                     </select></center>
                 </div>
                 <div class="col-sm">
