--- a/events.html
+++ b/events.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
 
+    <!-- For language selector -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="javascript/jquery-3.5.1.min.js"></script>
     <script src="bootstrap-4.3.1/js/bootstrap.min.js" ></script>
@@ -35,6 +39,7 @@
     <script src="javascript/all_events.js"></script>
     <script src="javascript/global_functions.js"></script>
     <script src="database/items.js"></script>
+    <script src="database/languages.js"></script>
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
     <title>All Events</title>
@@ -46,11 +51,27 @@
         <button class="navbar-toggler navbar-toggler-right bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" onclick="rollDownNavigation()">
             <span class="navbar-toggler-icon"> </span>
         </button>
-        <a href="index.html" class="navbar-brand text-white"><img src="images/general/home.png" width="30" style="position: relative;"> Home</a>
-        <a href="buildings.html" class="nav-link text-warning">All Buildings</a>
-        <a href="events.html" class="nav-link text-warning">&#x203A; All Events &#x2039;</a>
+        <a href="index.html" class="navbar-brand text-white" id="home"><img src="images/general/home.png" width="30" style="position: relative;"></a>
+        <a href="buildings.html" class="nav-link text-warning" id="all_buildings"></a>
+        <a href="events.html" class="nav-link text-warning" id="all_events"></a>
+
+        <script>
+            document.getElementById("home").innerHTML += " "+langUI("Home");
+            document.getElementById("all_buildings").innerHTML = langUI("All Buildings");
+            document.getElementById("all_events").innerHTML = "&#x203A; "+langUI("All Events")+" &#x2039;";
+        </script>
 
         <div>
+            <div class="dropdown" style="margin-right: 30px">
+                <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                    <img src="images/general/globe_big.png" style="width: 30px; position: relative">
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('en')"><img src="images/general/lang_en.png">EN</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('cz')"><img src="images/general/lang_cz.png">CZ</a></li>
+                </ul>
+            </div>
             <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;top: 5px;position: absolute;">
         </div>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -74,7 +95,7 @@
 </div>
 
 <div class="highest2 container bg-skin_background rounded-right75 border-bottom border-right border-top border-popup" style="width: 155px; height: 50px; margin-top: 274px; margin-left: 0px; position: fixed">
-    <div class="justify-content-center box d-flex flex-column" style="height: 100%;"><span class="align-middle"><a class="text-link font-weight-bold" href="#events_top"><img src="images/general/calendar.png" width="45" style="margin-right: 2px; position: relative;">Calendar</a></span></div>
+    <div class="justify-content-center box d-flex flex-column" style="height: 100%;"><span class="align-middle"><a class="text-link font-weight-bold" id="calendar_top" href="#events_top"><img src="images/general/calendar.png" width="45" style="margin-right: 2px; position: relative;"></a></span></div>
 </div>
 
 <div style="padding-top: 59px;" id="events_top">
@@ -84,7 +105,7 @@
                 <div class="col-sm">
                     <div class="row center" style="height: 33%; vertical-align: middle">
                         <div class="col-sm">
-                            <center><label for="input_event" style="margin-left: 40px;">Select event:</label>
+                            <center><label for="input_event" id="select_event_label" style="margin-left: 40px;"></label>
                             <select id="input_event" class="custom-select" style="width: 80%;">
                                 <optgroup label="2021">
                                     <option value="march_xxi_" selected="selected">Rise of the Phoenix Cult</option>
@@ -94,7 +115,7 @@
                             </center>
                         </div>
                         <div class="col-sm">
-                            <center><label for="input_orderBy">Order daily prizes by</label>
+                            <center><label for="input_orderBy" id="order_daily_prizes_by_label"></label>
                                 <select id="input_orderBy" class="custom-select" style="width: 30%;" onchange="">
                                     <option value="day">Day</option>
                                     <option value="providedCulture">Culture per square</option>
@@ -105,8 +126,8 @@
                                     <option value="mana">Mana per square per 1h</option>
                                     <option value="seeds">Seeds per square per 1h</option>
                                 </select>
-                                <label for="input_chapter" class="d-inline-block">for chapter:
-                                    <select id="input_chapter" class="custom-select d-inline-block" style="width: 40%;" onchange="">
+                                <label for="input_chapter" class="d-inline-block" id="for_chapter_label"></label>
+                                    <select id="input_chapter" class="custom-select d-inline-block" style="width: 10%;" onchange="">
                                         <option value="all_">All</option>
                                         <option value="17">17</option>
                                         <option value="16">16</option>
@@ -125,7 +146,7 @@
                                         <option value="3">3</option>
                                         <option value="2">2</option>
                                         <option value="1">1</option>
-                                    </select></label>
+                                    </select>
                             </center>
                         </div>
                     </div>
@@ -133,7 +154,7 @@
 
                     </div>
                     <div class="col text-center" style="height: 33%; position: relative" >
-                        <button class="btn btn-sm btn-success btn-block text-uppercase center" style="width: 50%; align-content: center" onclick="displayDailyPrizes();">Generate Daily Prizes</button>
+                        <button class="btn btn-sm btn-success btn-block text-uppercase center" id="generate_daily_prizes_button" style="width: 50%; align-content: center" onclick="displayDailyPrizes();"></button>
                     </div>
                 </div>
                 <!--<div class="col-sm">
@@ -146,6 +167,15 @@
         </div>
     </div>
 </div>
+
+<script>
+    document.getElementById("select_event_label").innerHTML = langUI("Select event:");
+    document.getElementById("order_daily_prizes_by_label").innerHTML = langUI("Order daily prizes by:");
+    document.getElementById("for_chapter_label").innerHTML = langUI("For chapter:");
+    document.getElementById("calendar_top").innerHTML += langUI("Calendar");
+    document.getElementById("generate_daily_prizes_button").innerHTML += langUI("Generate Daily Prizes");
+
+</script>
 
 
 <!-- SKRYTE SELECTY -->
