--- a/admin.html
+++ b/admin.html
@@ -96,5 +96,14 @@
     <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="regenerateItemsJSON()">GENERATE</button>
 
 </div>
+
+<div class="container" style="margin-bottom: 20px;">
+    <p>Jazykove verzie nazvov budov</p>
+
+
+    <input class="form-control-file" type="file" id="building_names" name="filename">
+    <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="regenerateBuildingNamesLanguages()">GENERATE</button>
+
+</div>
 </body>
 </html>
