--- a/buildings.html
+++ b/buildings.html
@@ -39,6 +39,7 @@
     <script src="javascript/global_functions.js"></script>
     <script src="database/variousData.js"></script>
     <script src="database/languages.js"></script>
+    <script src="database/buildingNamesLanguages.js"></script>
     <!--<script  src="javascript/config.js"></script>-->
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
