--- a/events.html
+++ b/events.html
@@ -40,6 +40,7 @@
     <script src="javascript/global_functions.js"></script>
     <script src="database/items.js"></script>
     <script src="database/languages.js"></script>
+    <script src="database/buildingNamesLanguages.js"></script>
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
     <title>All Events</title>
