--- a/buildings.html
+++ b/buildings.html
@@ -103,6 +103,7 @@
                     <select id="input_event" class="custom-select" style="width: 50%; margin-bottom: 10px;"  onchange="">
                         <option value="all_events">All</option>
                         <optgroup label="2021">
+                            <!--<option value="may_xxi_" >Fairy Queen's Garden</option>-->
                             <option value="march_xxi_" selected="selected">Rise of the Phoenix Cult</option>
                             <option value="february_xxi_">Elvarian Carnival</option>
                         </optgroup>
