--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <div class="panel">
         <div class="container center bg-skin_light_background rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; max-height: 600px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
+                <li><strong>Chapter 18 arrived!</strong> All buildings have been regenerated to contain values for chapter 18 (April 8th 2021)</li>
                 <li><strong>New filter options!</strong> Now it is possible to filter the buildings also based on their goods productions (both standard and sentient goods) + various small changes were made on the website (including a new look of the All Events page) (April 4th 2021)</li>
                 <li>Introduction video
                     <iframe class="center" width="560" height="315.2" src="https://www.youtube.com/embed/0OwlOJNLWmw" allowfullscreen="true"></iframe>
