--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
         </script>
 
         <div>
-            <div class="dropdown" style="margin-right: 30px">
+            <div class="dropdown" style="margin-right: 40px">
                 <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
                     <img src="images/general/globe_big.png" style="width: 30px; position: relative">
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('en')"><img src="images/general/lang_en.png" style="margin-right: 3px;">EN</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('cz')"><img src="images/general/lang_cz.png" style="margin-right: 3px;">CZ</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('en')"><img src="images/general/lang_en.png" style="margin-right: 3px; margin-left: 3px;">EN</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('cz')"><img src="images/general/lang_cz.png" style="margin-right: 3px; margin-left: 3px;">CZ</a></li>
                 </ul>
             </div>
             <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;top: 5px;position: absolute;">
@@ -85,9 +85,11 @@
     </button>
 </div>
 
-<div class="col-md-7" style="padding-top: 20px; margin-top: 70px;">
+<center><img style="margin-top: 70px;" src="https://i.ibb.co/GtDWfRY/EL-str-nka-logo2.png"></center>
+
+<div class="col-md-7" style="padding-top: 20px; margin-top: 0px;">
     <div class="panel">
-        <div class="container center bg-skin_light_background rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; max-height: 600px; overflow-y: scroll;">
+        <div class="container center bg-skin_light_background rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; max-height: 500px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
                 <li><strong>Chapter 18 arrived!</strong> All buildings have been regenerated to contain values for chapter 18 (April 8th 2021)</li>
                 <li><strong>New filter options!</strong> Now it is possible to filter the buildings also based on their goods productions (both standard and sentient goods) + various small changes were made on the website (including a new look of the All Events page) (April 4th 2021)</li>
