--- a/events.html
+++ b/events.html
@@ -109,6 +109,7 @@
                             <center><label for="input_event" id="select_event_label" style="margin-left: 40px;"></label>
                             <select id="input_event" class="custom-select" style="width: 80%;">
                                 <optgroup label="2021">
+                                    <option value="may_xxi_" disabled>Queen Fairy's Garden (available soon)</option>
                                     <option value="march_xxi_" selected="selected">Rise of the Phoenix Cult</option>
                                     <option value="february_xxi_">Elvarian Carnival</option>
                                 </optgroup>
