--- a/buildings.html
+++ b/buildings.html
@@ -103,8 +103,8 @@
                     <select id="input_event" class="custom-select" style="width: 50%; margin-bottom: 10px;"  onchange="">
                         <option value="all_events">All</option>
                         <optgroup label="2021">
-                            <option value="may_xxi_" disabled>Queen Fairy's Garden (available soon)</option>
-                            <option value="march_xxi_" selected="selected">Rise of the Phoenix Cult</option>
+                            <option value="may_xxi_" selected="selected">Queen Fairy's Garden</option>
+                            <option value="march_xxi_">Rise of the Phoenix Cult</option>
                             <option value="february_xxi_">Elvarian Carnival</option>
                         </optgroup>
                         <optgroup label="2020">
