reworked index page

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-    
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9MQN4EC0WX"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-9MQN4EC0WX');
-</script>
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9MQN4EC0WX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-9MQN4EC0WX');
+    </script>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -38,7 +38,7 @@
 
     <!-- NAVIGATION -->
 
-    <nav class="navbar navbar-light fixed-top bg-dark highest1">
+    <nav class="navbar navbar-light fixed-top bg-dark highest1" style="position: relative;">
         <button class="navbar-toggler navbar-toggler-right bg-light" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" onclick="rollDownNavigation()">
             <span class="navbar-toggler-icon"> </span>
         </button>
@@ -85,11 +85,11 @@
     </button>
 </div>
 
-<center><img style="margin-top: 70px;" src="https://i.ibb.co/GtDWfRY/EL-str-nka-logo2.png"></center>
+<center><img style="max-width: 100%; position: relative" src="https://i.ibb.co/GtDWfRY/EL-str-nka-logo2.png"></center>
 
-<div class="col-md-7" style="padding-top: 20px; margin-top: 0px;">
-    <div class="panel">
-        <div class="container center bg-skin_light_background rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px; max-height: 500px; overflow-y: scroll;">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
                 <li><strong>Queen Fairy´s Garden event arrived!</strong> All buildings from this event are now in the database (April 15th 2021)</li>
                 <li><strong>Chapter 18 arrived!</strong> All buildings have been regenerated to contain values for chapter 18 (April 8th 2021)</li>
@@ -98,6 +98,15 @@
                     <iframe class="center" width="560" height="315.2" src="https://www.youtube.com/embed/0OwlOJNLWmw" allowfullscreen="true"></iframe>
                 </li>
                 <li><strong>Release of the website! (March 2021)</strong></li>
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-1 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
+            <div id="column_with_videos" class="col-md">
+                <li><strong>Newest videos on my channel!</strong> Subscribe to stay with the latest videos!</li>
+                <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/lQ-iFRKuFvU" allowfullscreen="true"></iframe>
+                <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/6VoSOv1ZXFA" allowfullscreen="true"></iframe>
+                <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/AS2XrTrF8PM" allowfullscreen="true"></iframe>
+
             </div>
         </div>
     </div>
