--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         </div>
         <div class="col-md-6 col-sm-1 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_videos" class="col-md">
-                <li><strong>Newest videos on my channel!</strong> Subscribe to stay with the latest videos!</li>
+                <li><strong>Videos on my channel</strong> - subscribe to stay with the latest videos!</li>
+                <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/aUgB0IihzLY" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/lQ-iFRKuFvU" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/6VoSOv1ZXFA" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/AS2XrTrF8PM" allowfullscreen="true"></iframe>
