set buildings mechanic #11

--- a/admin.html
+++ b/admin.html
@@ -73,6 +73,7 @@
 
         Buildings: <input class="form-control-file" type="file" id="myFile" name="filename">
         Evolving: <input class="form-control-file" type="file" id="evolvingFile" name="filename">
+        Sets: <input class="form-control-file" type="file" id="setsFile" name="filename">
         <input  class="form-control" id="filter" placeholder="Filter by substring of id">
         <input  class="form-control" id="exclude" placeholder="Exclude by substring of id (delimiter is ,)">
         <input  class="form-control_number" id="numOfChapters" placeholder="CHs" value="17">
