buildings search feature, own window for each building feature

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="row">
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
-                <li><strong>Various improvements on the portal!</strong> Now the set buildings are fully supported, you can search buildings by the names and each building can be opened in it's own window (May 2nd 2021</li>
+                <li><strong>Various improvements on the portal!</strong> Now the set buildings are fully supported, you can search buildings by the names and each building can be opened in it's own window (May 2nd 2021)</li>
                 <li><strong>Queen Fairy´s Garden event arrived!</strong> All buildings from this event are now in the database (April 15th 2021)</li>
                 <li><strong>Chapter 18 arrived!</strong> All buildings have been regenerated to contain values for chapter 18 (April 8th 2021)</li>
                 <li><strong>New filter options!</strong> Now it is possible to filter the buildings also based on their goods productions (both standard and sentient goods) + various small changes were made on the website (including a new look of the All Events page) (April 4th 2021)</li>
